[package]
name = "hammer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# wgpu backend (not glow): falls back to Windows' built-in WARP software
# renderer, so the GUI works on bare VMs / RDP / machines with no GPU driver
# and needs nothing extra installed.
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu"] }
egui = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
rand = "0.8"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
codegen-units = 1
